# districtlive-server

./: .bazelignore  .bazelrc  .bazelversion  .devcontainer  .dockerignore  .envrc  .github  .gitignore  .sqlx  BUILD.bazel  CLAUDE copy.md  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  LICENSE  MODULE.bazel  README.md  ROADMAP.md  Tiltfile  docs  frontend  k8s  migrations  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scripts  src  tatus  tests
.claude/: settings.local.json
.devcontainer/: devcontainer.json  post-create.sh
.ed3d/: design-plan-guidance.md  implementation-plan-guidance.md
.github/workflows/: ci.yml  deploy.yml
docs/: RATIONALE.md  staging-setup.md
docs/design-plans/: 2026-04-29-rust-port.md  2026-05-02-doks-staging-deployment.md
docs/implementation-plans/2026-04-29-rust-port/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  test-requirements.md
docs/test-plans/: 2026-04-29-rust-port.md  2026-05-02-doks-staging-deployment.md
frontend/: CLAUDE.md  README.md  eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: api.ts  main.ts  types.ts
frontend/src/.claude/: settings.local.json
frontend/src/pages/featured/: index.html  main.ts
frontend/src/pages/ingestion/: index.html  main.ts
k8s/base/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
k8s/overlays/local/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
k8s/overlays/staging/patches/: deployment-staging.yaml  postgres-storage.yaml  service-loadbalancer.yaml
kotlin-src/src/main/kotlin/com/memetoclasm/districtlive/: DistrictLiveServerApplication.kt  SecurityConfig.kt  VersionApiService.kt
kotlin-src/src/main/kotlin/com/memetoclasm/districtlive/admin/: AdminApiService.kt  AdminWebController.kt
kotlin-src/src/main/kotlin/com/memetoclasm/districtlive/auth/: JwtResponse.kt  LoginRequest.kt  RegistrationRequest.kt
kotlin-src/src/main/kotlin/com/memetoclasm/districtlive/event/: AgeRestriction.kt  ArtistRepositoryPort.kt  EnrichmentStatus.kt  EventError.kt  EventRepositoryPort.kt  EventStatus.kt  EventType.kt  EventUpsertCommand.kt  PriceTier.kt  SlugUtils.kt  SourceType.kt  UpsertResult.kt  VenueRepositoryPort.kt
kotlin-src/src/main/kotlin/com/memetoclasm/districtlive/featured/: FeaturedEventError.kt  FeaturedEventRepositoryPort.kt
kotlin-src/src/main/kotlin/com/memetoclasm/districtlive/ingestion/: ConnectorConfig.kt  DiscordNotificationAdapter.kt  IngestionConfig.kt  IngestionError.kt  IngestionScheduler.kt  NotificationConfig.kt  NotificationPort.kt  RawEventDto.kt  SourceConnector.kt
kotlin-src/src/main/resources/: application-staging.yml  application.yml
kotlin-src/src/main/resources/db/migration/: V13__artist_enrichment.sql  V15__venue_display_overrides.sql  V16__seed_dc9_source.sql  V18__seed_dicefm_source_and_venues.sql  V20__seed_union_stage_presents.sql  V2__create_venues.sql  V4__create_events.sql  V5__create_event_sources.sql  V9__seed_sources.sql
kotlin-src/src/main/resources/static/assets/: apiClient-D8L4PI7s.css  apiClient-DK5mRDuR.js  featured-g4Gcekqc.css  featured-yDXOm2wm.js  ingestion-9AlsuKHo.css  ingestion-DnsnaZj0.js
kotlin-src/src/main/resources/static/src/pages/featured/: index.html
kotlin-src/src/main/resources/static/src/pages/ingestion/: index.html
kotlin-src/src/test/kotlin/com/memetoclasm/districtlive/: DistrictLiveServerApplicationTests.kt
kotlin-src/src/test/kotlin/com/memetoclasm/districtlive/admin/: AdminApiServiceTest.kt  AdminWebControllerFeaturedTest.kt  AdminWebControllerIngestionTest.kt
kotlin-src/src/test/kotlin/com/memetoclasm/districtlive/featured/: FeaturedEventIntegrationTest.kt
kotlin-src/src/test/resources/: application-integration.yml
kotlin-src/src/test/resources/fixtures/: comet-ping-pong-empty.html  dc9-events.html  dicefm-empty-events.html  dicefm-venue-events.html  pie-shop-empty.html  union-stage-presents-detail.html  union-stage-presents-empty.html  union-stage-presents-listing.html
migrations/: 0001_init.sql  0003_create_artists.sql  0006_create_sources.sql  0007_create_ingestion_runs.sql  0008_seed_venues.sql  0010_rename_atlantis_venue.sql  0011_seed_ticketmaster_dc_venues.sql  0012_add_featured_events.sql  0014_deterministic_venue_uuids.sql  0017_event_slug_unique.sql  0019_seed_pieshop_cpp_sources.sql  0021_add_source_id_to_event_sources.sql  0022_add_last_error_message_to_sources.sql  0023_source_type_to_text.sql  0024_enum_columns_to_text.sql
scripts/: dev.sh
src/: config.rs  lib.rs  main.rs
src/adapters/: db.rs  mod.rs  pg_artists.rs  pg_events.rs  pg_featured.rs  pg_ingestion_runs.rs  pg_sources.rs  pg_venues.rs
src/adapters/connectors/: bandsintown.rs  black_cat.rs  comet_ping_pong.rs  dc9.rs  dice_fm.rs  mod.rs  pie_shop.rs  rhizome_dc.rs  seven_drum_city.rs  ticketmaster.rs  union_stage_presents.rs
src/adapters/enrichers/: mod.rs  musicbrainz.rs  spotify.rs
src/domain/: artist.rs  error.rs  event.rs  event_source.rs  featured_event.rs  ingestion_run.rs  mod.rs  source.rs  venue.rs
src/enrichment/: CLAUDE.md  mod.rs  orchestrator.rs  scheduler.rs
src/http/: CLAUDE.md  admin.rs  artists.rs  dto.rs  error.rs  events.rs  featured.rs  mod.rs  venues.rs  version.rs
src/http/middleware/: basic_auth.rs
src/ingestion/: CLAUDE.md  deduplication.rs  mod.rs  normalization.rs  orchestrator.rs  scheduler.rs
src/ports/: artist_enricher.rs  artist_repository.rs  event_repository.rs  featured_event_repository.rs  ingestion_run_repository.rs  mod.rs  source_connector.rs  source_repository.rs  venue_repository.rs
tests/: BUILD.bazel  api.rs  connector_tests.rs  integration_db.rs  properties.rs
tests/fixtures/: 7-drum-city-events.html  bandsintown-dc-artists.json  black-cat-schedule.html  comet-ping-pong-detail.html  comet-ping-pong-listing.html  dicefm-mixed-events.html  dicefm-no-jsonld.html  dicefm-second-venue-events.html  events.json  pie-shop-detail.html  pie-shop-listing.html  rhizome-dc-events.html  ticketmaster-dc-events.json  union-stage-presents-listing.html
tests/support/: mod.rs
(+96 files in other folders)
