[package]
name = "districtlive_server"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Hexagonal HTTP service template"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "macros", "migrate", "rust_decimal"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
rust-embed = { version = "8.11", features = ["compression", "debug-embed", "deterministic-timestamps"] }
mime_guess = "2"

# HTML scraping — venue website connectors (Phase 5)
scraper = "0.26"

# Async HTTP client — all connectors and enrichers (Phase 5+)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Cron-scheduled async tasks — ingestion and enrichment schedulers (Phase 5+)
tokio-cron-scheduler = "0.13"

# Additional Axum utilities — TypedHeader for Basic auth (Phase 4)
axum-extra = { version = "0.10", features = ["typed-header"] }

# Exact decimal arithmetic — price/money fields (Phase 2+)
# default features (std, serde support) are minimal and appropriate; no need to disable
rust_decimal = { version = "1", features = ["serde"] }

# Base64 encoding — used by Basic auth test helpers (Phase 4 tests)
base64 = "0.22"

[dev-dependencies]
axum-test = "17"
proptest = "1"

[features]
test-helpers = []
