load("@rules_rust//rust:defs.bzl", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_test(
    name = "api",
    srcs = [
        "api.rs",
        "support/mod.rs",
    ],
    crate_root = "api.rs",
    edition = "2021",
    deps = [
        "//:lib_with_test_helpers",
        "@crates//:axum",
        "@crates//:axum-test",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)

rust_test(
    name = "properties",
    srcs = [
        "properties.rs",
        "support/mod.rs",
    ],
    crate_root = "properties.rs",
    edition = "2021",
    deps = [
        "//:lib",
        "@crates//:proptest",
        "@crates//:tokio",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)

# AC1.1-AC1.4: Migration integration tests deferred to Phase 3.
# Phase 1 does not verify schema correctness, seed data, or idempotent re-runs of migrations.
# These will be added in Phase 3 when the first PostgreSQL adapter (Greeter port) is
# implemented and the integration-test infrastructure is wired into the Bazel build.
# See Phase 3 plan for details.
