load("@rules_rust//rust:defs.bzl", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_test(
    name = "api",
    srcs = [
        "api.rs",
        "support/mod.rs",
    ],
    crate_root = "api.rs",
    edition = "2021",
    deps = [
        "//:lib_with_test_helpers",
        "@crates//:axum",
        "@crates//:axum-test",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)

rust_test(
    name = "properties",
    srcs = [
        "properties.rs",
        "support/mod.rs",
    ],
    crate_root = "properties.rs",
    edition = "2021",
    deps = [
        "//:lib",
        "@crates//:proptest",
        "@crates//:tokio",
        "@crates//:uuid",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)

rust_test(
    name = "integration_db",
    srcs = ["integration_db.rs", "support/mod.rs"],
    crate_root = "integration_db.rs",
    edition = "2021",
    tags = ["manual", "external"],
    rustc_env = {"SQLX_OFFLINE": "true"},
    deps = [
        "//:lib_with_test_helpers",
        "@crates//:sqlx",
        "@crates//:tokio",
        "@crates//:time",
        "@crates//:uuid",
        "@crates//:rust_decimal",
    ],
    proc_macro_deps = ["@crates//:async-trait"],
)
